src/objects/ADvendio__Ad_Specs__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_AnzahlAktiveWM_Preise__c</fullName>
        <description>Anzahl der aktiven WM-Preisen; Hilfsfeld - dient zur Reporting; muß nicht im PageLayout angezeigt werden</description>
        <inlineHelpText>Anzahl der zu dem Werbemittel zugeordenten aktiven WM-Preisen</inlineHelpText>
        <label>Anzahl aktive WM-Preise</label>
        <summaryFilterItems>
            <field>ADvendio__Ad_price__c.ADvendio__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Ad_price__c.ADvendio__Ad_Spec__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_Auftragstypen__c</fullName>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>Auftragstypen</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AdAudience</fullName>
                </value>
                <value>
                    <fullName>Backfill</fullName>
                </value>
                <value>
                    <fullName>Barter</fullName>
                </value>
                <value>
                    <fullName>Eigenvermarktung</fullName>
                </value>
                <value>
                    <fullName>Eigenwerbung</fullName>
                </value>
                <value>
                    <fullName>Forschung</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Standby</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_BT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist es erlaubt für diese Werbemittel/Produkt Soziademografisches und Behavior Targeting zu nutzen? wenn das Kontrollkästchen gefüllt ist werden die Aufschläge entsprechend aktiv.</description>
        <inlineHelpText>Ist es erlaubt für diese Werbemittel/Produkt Soziademografisches und Behavior Targeting zu nutzen? wenn das Kontrollkästchen gefüllt ist werden die Aufschläge entsprechend aktiv.</inlineHelpText>
        <label>BT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Conception__c</fullName>
        <defaultValue>false</defaultValue>
        <description>KV 02920. Dieses Feld indiziert, ob es sich um ein Conception-Werbemittel handelt.</description>
        <label>Conception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_CpxFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>Temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>CPX fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_FC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>FC fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_FcAufschlag__c</fullName>
        <description>Hinterlegung des FC-Preises in EUR für das Werbemittel. Der Preis gilt für jedes Frequency Capping, welches in einer Position ausgewählt wird.</description>
        <inlineHelpText>Hinterlegung des FC-Preises in EUR für das Werbemittel. Der Preis gilt für jedes Frequency Capping, welches in einer Position ausgewählt wird.</inlineHelpText>
        <label>FC-Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_GtFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Kein_Skonto__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn aktiviert, Skontowert wird nicht in MN3 berücksichtigt</description>
        <inlineHelpText>Über dieses Kontrollkästchen könnten Sie steuern, ob für dieses Werbemittel ein Skonto gewährt werden soll oder nicht (markieren, wenn kein Skonto erlaubt).</inlineHelpText>
        <label>Kein Skonto</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Mediagattung__c</fullName>
        <description>Hilfsfeld um die Info auf KampagnePosition zu übertragen; wird per Trigger befüllt; ist kein Formelfeld weil wir an Formellimits stoßen würden (KV 2551)</description>
        <inlineHelpText>Hier wird automatisch (per Code) der Name der M.-Gattung befüllt, welcher am Werbeträger gepflegt ist</inlineHelpText>
        <label>Mediagattung Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsDifferenzierung__c</fullName>
        <description>Hilfsfeld um die Info auf KampagnePosition zu übertragen; wird per Trigger befüllt; ist kein Formelfeld weil wir an Formellimits stoßen würden (KV 2551)</description>
        <inlineHelpText>Hier wird automatisch (per Code) der Name der M.-Differenzierung befüllt, welcher an der Werbeform gepflegt ist</inlineHelpText>
        <label>Mediagattungs-Differenzierung Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsSegment__c</fullName>
        <description>Hilfsfeld um die Info auf KampagnePosition zu übertragen; wird per Trigger befüllt; ist kein Formelfeld weil wir an Formellimits stoßen würden (KV 2551)</description>
        <inlineHelpText>Hier wird automatisch (per Code) der Name des M.-Segments befüllt, welche an der Belegungseinheit gepflegt ist</inlineHelpText>
        <label>Mediagattungs-Segment Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Multiscreen__c</fullName>
        <description>Kennzeichnet eine Multiscreen Belegungseinheit.</description>
        <formula>ADvendio__Placement__r.SomDig_Multiscreen__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kennzeichnet eine Multiscreen Belegungseinheit.</inlineHelpText>
        <label>Multiscreen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_NonMultiscreenSurcharge__c</fullName>
        <label>Non-Multiscreen Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_OtpAufschlag__c</fullName>
        <description>Wenn OTP für dieses Werbemittel möglich sein soll, dann hier bitte einen Preis eintragen (Hinweis: 0 EUR ist auch ein Preis). So wird das Werbemittel für OTP buchbar.</description>
        <inlineHelpText>Wenn OTP für dieses Werbemittel möglich sein soll, dann hier bitte einen Preis eintragen (Hinweis: 0 EUR ist auch ein Preis). So wird das Werbemittel für OTP buchbar.</inlineHelpText>
        <label>OTP-Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Preismerkmal__c</fullName>
        <formula>ADvendio__Placement__r.ADvendio__RateCategory__r.Name</formula>
        <label>Preismerkmal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_RetargetingSurcharge__c</fullName>
        <label>Retargeting Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_RotationExclusionSurcharge__c</fullName>
        <label>Aufschlag für Rotationsauschluss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Rotationstyp__c</fullName>
        <formula>TEXT(ADvendio__Placement__r.SomDig_Rotationstyp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rotationstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_TT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist es erlaubt für diese Werbemittel/Produkt Geo/Zeit/Browser, Betriebssystem usw. - Targeting zu nutzen? wenn das Kontrollkästchen gefüllt ist werden die Aufschläge entsprechend aktiv.</description>
        <inlineHelpText>Ist es erlaubt für diese Werbemittel/Produkt Geo/Zeit/Browser, Betriebssystem usw. - Targeting zu nutzen? wenn das Kontrollkästchen gefüllt ist werden die Aufschläge entsprechend aktiv.</inlineHelpText>
        <label>TT fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_TargetingAufschlagAggregat__c</fullName>
        <description>Wie soll der jeweils am Key hinterlegte Targeting-Preis mit anderen Key-Preisen berücksichtigt werden: SUM, MAX oder MIN?</description>
        <inlineHelpText>Wie soll der jeweils am Key hinterlegte Targeting-Preis mit anderen Key-Preisen berücksichtigt werden: SUM, MAX oder MIN?</inlineHelpText>
        <label>Targeting Aufschlag Aggregatfunktion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MIN</fullName>
                </value>
                <value>
                    <fullName>MAX</fullName>
                </value>
                <value>
                    <fullName>SUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Targeting_Provider__c</fullName>
        <description>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</description>
        <inlineHelpText>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</inlineHelpText>
        <label>Targeting Provider</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATV_PBT</fullName>
                </value>
                <value>
                    <fullName>Autosites</fullName>
                </value>
                <value>
                    <fullName>Diverse Kriterien</fullName>
                </value>
                <value>
                    <fullName>Gesundheit.de</fullName>
                </value>
                <value>
                    <fullName>nugg.ad</fullName>
                </value>
                <value>
                    <fullName>nugg.ad InApp</fullName>
                </value>
                <value>
                    <fullName>Rotationsausschluss</fullName>
                </value>
                <value>
                    <fullName>SmartGeo</fullName>
                </value>
                <value>
                    <fullName>Vereinssites</fullName>
                </value>
                <value>
                    <fullName>wetter.com</fullName>
                </value>
                <value>
                    <fullName>wetter.com CTV</fullName>
                </value>
                <value>
                    <fullName>ZG S71 Paket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_Targetingaufschlag__c</fullName>
        <description>Wenn es einen Targetingaufschlag gibt ist dieser hier zu hinterlegen.</description>
        <inlineHelpText>Wenn es einen Targetingaufschlag gibt ist dieser hier zu hinterlegen.</inlineHelpText>
        <label>Targeting-Aufschlag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_TkpFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporäres Feld für die Migration der Produktmatrix</description>
        <inlineHelpText>temporäres Feld für die Migration der Produktmatrix</inlineHelpText>
        <label>TKP fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Wasmuth_AdType__c</fullName>
        <description>Werbeform-Name nur bis Tilde (so, wie von Wasmuth benötigt)</description>
        <formula>LEFT(ADvendio__Ad_Type__r.Name,FIND(&quot;~&quot;, ADvendio__Ad_Type__r.Name) -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Werbeform-Name nur bis Tilde (so, wie von Wasmuth benötigt)</inlineHelpText>
        <label>Werbeform (Wasmuth)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Wasmuth_Placement__c</fullName>
        <description>Belegungseinheit-Name nur bis Tilde (so, wie von Wasmuth benötigt)</description>
        <formula>LEFT(ADvendio__Placement__r.Name,FIND(&quot;~&quot;, ADvendio__Placement__r.Name) -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Belegungseinheit-Name nur bis Tilde (so, wie von Wasmuth benötigt)</inlineHelpText>
        <label>Belegungseinheit (Wasmuth)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Wasmuth_Site__c</fullName>
        <description>Werbeträger-Name nur bis Tilde (so, wie von Wasmuth benötigt)</description>
        <formula>LEFT(ADvendio__Placement__r.ADvendio__Site__r.Name,FIND(&quot;~&quot;, ADvendio__Placement__r.ADvendio__Site__r.Name) -1 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Werbeträger-Name nur bis Tilde (so, wie von Wasmuth benötigt)</inlineHelpText>
        <label>Werbeträger (Wasmuth)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Werbeformgruppe__c</fullName>
        <description>übernimmt den Wert von der Werbeform</description>
        <formula>TEXT(ADvendio__Ad_Type__r.SomDig_Werbeformgruppe__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>übernimmt den Wert von der Werbeform</inlineHelpText>
        <label>Werbeformgruppe</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_iAdFaehig__c</fullName>
        <defaultValue>false</defaultValue>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>iAd fähig</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_old_Rotationstyp__c</fullName>
        <description>temporär zur Erstellung der Produktmatrix</description>
        <inlineHelpText>temporär zur Erstellung der Produktmatrix</inlineHelpText>
        <label>old Rotationstyp</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Network-Rotation</fullName>
                </value>
                <value>
                    <fullName>Premium-Umfeld</fullName>
                </value>
                <value>
                    <fullName>Rotation TV-Brand</fullName>
                </value>
                <value>
                    <fullName>Site-Rotation</fullName>
                </value>
                <value>
                    <fullName>Standard-Umfeld</fullName>
                </value>
                <value>
                    <fullName>Themenrotationen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ad Spec</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>ADvendio__Placement__c</columns>
        <columns>ADvendio__Ad_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>SomDig_AbrechnungLeistungsevaluiert__c</columns>
        <columns>Mig_ProdiaKey__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Packages</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Ad_Type__c</columns>
        <columns>ADvendio__Distribution__c</columns>
        <columns>ADvendio__External_Name__c</columns>
        <columns>ADvendio__VATType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__Ad_Specs__c.ADvendio__Packet</value>
        </filters>
        <label>Packages</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SomDig_DienstleistungsWM</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Placement__c</columns>
        <columns>SomDig_Mediagattung__c</columns>
        <columns>SomDig_MediagattungsDifferenzierung__c</columns>
        <columns>ADvendio__Ad_Type__c</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>ADvendio__No_Agency_Discount__c</columns>
        <columns>ADvendio__NoAgencyComission__c</columns>
        <columns>ADvendio__No_Customer_Discount__c</columns>
        <columns>SomDig_Kein_Skonto__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Placement__c</field>
            <operation>equals</operation>
            <value>Dienstleistung</value>
        </filters>
        <label>Dienstleistungs WM</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_TeletextWerbemittel</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Placement_Name__c</columns>
        <columns>ADvendio__Ad_Type__c</columns>
        <columns>ADvendio__Site__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Product_search_Name__c</field>
            <operation>contains</operation>
            <value>diverse Werbeformen</value>
        </filters>
        <label>Teletext Werbemittel</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_WerbemittelNachKategorien</fullName>
        <columns>NAME</columns>
        <columns>SomDig_Werbeformgruppe__c</columns>
        <columns>ADvendio__Ad_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>Werbemittel nach Kategorien</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_SphereSomDe</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Ad Spec Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Specs</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__Packet</fullName>
        <active>true</active>
        <description>This record type should be used to store packet product.</description>
        <label>Packet</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__Standard</fullName>
        <active>true</active>
        <description>This record type should be used to store standard product.</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SomDig_FrequencyCapping</fullName>
        <active>true</active>
        <description>Kontrolle, dass alle Felder bei Hinterlegung eines vordefinierten Frequency Cappings auch ausgewählt bzw befüllt werden. Zudem darf keine Null (0) hinterlegt werden. Der Wert für FC Anzahl Periode wird automatisch per Workflow auf 1 gesetzt</description>
        <errorConditionFormula>OR (
 AND (
  ISBLANK ( TEXT ( ADvendio__FC_Quantity__c ) ) ,
  NOT ( ISBLANK ( TEXT ( ADvendio__FC_Period__c ) ) )
 ),
 AND (
  NOT ( ISBLANK ( TEXT ( ADvendio__FC_Quantity__c ) ) ) ,
  ISBLANK ( TEXT ( ADvendio__FC_Period__c ) )
 ),
 OR (
  ADvendio__FC_Quantity__c = 0 ,
  ADvendio__FC_Ad_served_every__c = 0 
 )
)</errorConditionFormula>
        <errorMessage>Zum Hinterlegen eines Frequency Cappings am Werbemittel müssen alle zwei Felder/Parameter ausgefüllt sein, dies bitte kontrollieren und vervollständigen (FC Menge und FC Ad ausgeliefert alle). Zudem darf keine Null (0) ausgewählt werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_KontrolleErsteller</fullName>
        <active>true</active>
        <description>Für den Belegungsplan/Festplazierungsliste benötigen Sales, PM &amp; PAM die Objekt-Berechtigung, Datensätze zu erstellen. Da dies Sales/PAM nicht machen soll, wurde diese Validierung noch erstellt (KV 01797).</description>
        <errorConditionFormula>$Profile.Id != $Label.ProfileIdAdmin

&amp;&amp;

ISNEW()

&amp;&amp; 
(
$Profile.Name = &quot;BI&quot;
 || 
$Profile.Name = &quot;SomDig_Sales&quot;
 || 
$Profile.Name = &quot;SomDig_PAM&quot;)</errorConditionFormula>
        <errorMessage>Sales, PAM oder PM dürfen keine Datensätze des Objektes Werbemittel erstellen, aktuell nur AdTech.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_NameDoubleBlank</fullName>
        <active>true</active>
        <description>KV 03291. Keine doppelten Leerzeichen in den Feldern Name, Kurzform, externe Bezeichnung und Produktsuche.</description>
        <errorConditionFormula>CONTAINS(Name, &apos;  &apos;) || CONTAINS(ADvendio__ShortDescription__c, &apos;  &apos;) || CONTAINS(ADvendio__External_Name__c, &apos;  &apos;) || CONTAINS(ADvendio__Product_search_Name__c, &apos;  &apos;)</errorConditionFormula>
        <errorMessage>Keine doppelten Leerzeichen in den Feldern Name, Kurzform, externe Bezeichnung und Produktsuche.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_Rotationsausschluss</fullName>
        <active>true</active>
        <description>Wenn der Targeting Provider &quot;Rotationsausschluss&quot; nicht ausgewählt wurde, soll der Aufschlag für Rotationsausschluss nicht pflegbar sein.</description>
        <errorConditionFormula>NOT(INCLUDES(SomDig_Targeting_Provider__c, &apos;Rotationsausschluss&apos;)) &amp;&amp; NOT(ISBLANK(SomDig_RotationExclusionSurcharge__c))</errorConditionFormula>
        <errorMessage>Der Aufschlag für Rotationsausschluss darf nicht gepflegt werden wenn der Targeting Provider Rotationsausschluss nicht ausgewählt ist.</errorMessage>
    </validationRules>
</CustomObject>